tests/parser/statement_case_err3.mtp
begin
	(*missing case*)
	case (something) of
		s := 0;
	second:
		s := 1
	else
		s := 99
	end
end
.